# ONA-DIAGNOSTIC-

./: .gitattributes  .gitignore  Makefile  README.md
cloud-platform/: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt
cloud-platform/app/: __init__.py  main.py
cloud-platform/app/api/: auth.py  devices.py  feedback.py  models_api.py  referrals.py  reports.py  results.py  router.py  seed.py
cloud-platform/app/core/: config.py  database.py
cloud-platform/app/models/: __init__.py  models.py
cloud-platform/app/services/: report_generator.py
cloud-platform/tests/: __init__.py
docs/: AI_LEARNING_LOOP.md  MODEL_TRAINING.md  TECHNICAL_GUIDE.md  USER_GUIDE.md
edge-agent/: Dockerfile  pyproject.toml
edge-agent/app/: __init__.py  main.py
edge-agent/app/core/: config.py  database.py
edge-agent/app/deid/: __init__.py  deid.py
edge-agent/app/device_daemon/: __init__.py  daemon.py
edge-agent/app/dicom_ingest/: __init__.py  ingest.py
edge-agent/app/inference/: __init__.py  inference.py
edge-agent/app/inference/ct/: __init__.py
edge-agent/app/inference/mri/: __init__.py
edge-agent/app/inference/xray/: __init__.py
edge-agent/app/local_ui/: __init__.py  router.py
edge-agent/app/local_ui/i18n/: en.json  so.json  sw.json
edge-agent/app/local_ui/static/: style.css
edge-agent/app/local_ui/templates/: admin.html  base.html  index.html  result.html  studies.html
edge-agent/app/models/: __init__.py  models.py
edge-agent/app/sync_client/: __init__.py  sync.py
edge-agent/data/: .gitignore
edge-agent/data/models/: ona-cxr-resnet18-v2.0.manifest.json
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
(+58 files in other folders)
